<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    android:orientation="vertical"
    tools:context=".Main3Activity">

    <ImageView
        android:id="@+id/andela_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/loooooool" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:hint="@android:string/unknownName"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:text="@string/track_android"
        android:textSize="@dimen/text_size" />


    <TextView
        android:id="@+id/phone_number"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:text="@string/phone_no"
        android:textSize="@dimen/text_size"
        android:visibility="visible" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:text="@string/country"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/slack_username"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:text="@string/slack"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/e_mail"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:text="@string/email"
        android:textSize="@dimen/text_size" />

</LinearLayout>